Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignTextBoolObjWrapped.quorum
class main
    action Main
        Boolean b
        b:setValue(true)
        text t = b
    end
end